# flex-aquadx

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/fonts/: LICENSES.md
examples/telegram_bot/: README.md  bot.py  requirements.txt
scripts/: render_poc.py
src/aquadx/: __init__.py  main.py  settings.py
src/aquadx/api/: deps.py  errors.py  health.py
src/aquadx/api/v1/: assets.py  cards.py  cards_image.py  players.py  rankings.py  scores.py
src/aquadx/cache/: base.py  memory.py
src/aquadx/clients/: aquadx.py
src/aquadx/mappers/: maimai.py
src/aquadx/meta/: loader.py
src/aquadx/models/: domain.py  upstream.py
src/aquadx/render/: cache_keys.py  fonts.py  jacket_loader.py  palette.py  renderer.py
src/aquadx/render/templates/: leaderboard.py  rating_frame.py  track_result.py
src/aquadx/utils/: logging.py  ratelimit.py
tests/: conftest.py  test_assets.py  test_cache.py  test_client.py  test_errors.py  test_health.py  test_mappers.py  test_meta_loader.py  test_players.py  test_rankings_scores_cards.py  test_ratelimit.py  test_render.py  test_security.py
