[project]
name = "flex-aquadx"
version = "0.1.0"
description = "Чистый асинхронный Python-микросервис-обёртка над AquaDX REST v2 API (maimai DX, CHUNITHM)."
readme = "README.md"
license = { text = "CC-BY-NC-SA-4.0" }
requires-python = ">=3.12"
authors = [{ name = "Egor Tronin" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "cachetools>=5.5",
  "structlog>=24.4",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-cachetools>=5.5",
]
redis = ["redis>=5.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aquadx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
source = ["src/aquadx"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",     # pycodestyle / pyflakes
  "I",     # isort
  "B",     # bugbear
  "UP",    # pyupgrade
  "ASYNC", # async pitfalls
  "SIM",   # simplify
  "RUF",
]
ignore = [
  "E501",
  "B008",  # FastAPI Depends() требует значения по умолчанию
  "RUF001",  # русские комментарии — кириллица рядом с ASCII легитимна
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["cachetools.*", "respx.*"]
ignore_missing_imports = true
